k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: default
spec:
  selector:
    app: service-a
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
