k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: default
spec:
  selector:
    app: service-b
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
